# lemonslice-examples

./: .gitignore  LICENSE  README.md
01-hosted-api-app/: README.md  pnpm-lock.yaml
01-hosted-api-daily-app/: .env.example  README.md  index.html  requirements.txt
01-hosted-api-daily-app/src/: api.js  index.css
01-hosted-api-daily-app/src/components/: LemonSliceAgentApp.jsx
01-hosted-daily-app/: README.md  package.json  pnpm-lock.yaml
01-hosted-daily-app/backend/: server.py
01-hosted-daily-app/src/components/: AgentCall.jsx  AgentVideoTile.jsx  HomeScreen.jsx  LemonSliceAgentApp.jsx
02-livekit-playground-demo/: README.md  agent.py  pyproject.toml  utils.py
03-livekit-app-python/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
03-livekit-app-python/agent/: pyproject.toml
03-livekit-app-python/agent/src/: agent.py
03-livekit-app-python/src/app/: layout.tsx  page.tsx
03-livekit-app-python/src/app/api/token/: route.ts
03-livekit-app-python/src/components/: AgentCallUI.tsx
03-livekit-app-python/src/components/agent-call/: AgentVideoView.tsx  PreJoinPreview.tsx
04-livekit-app-nodejs/: README.md  package-lock.json  package.json  pnpm-lock.yaml
04-livekit-app-nodejs/agent/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
04-livekit-app-nodejs/agent/src/: main.ts
04-livekit-app-nodejs/src/app/: globals.css
04-livekit-app-nodejs/src/components/: AgentCallUI.tsx
04-livekit-app-nodejs/src/components/agent-call/: AgentVideoView.tsx  PreJoinPreview.tsx
05-pipecat-app/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
05-pipecat-app/agent/: README.md  pyproject.toml
05-pipecat-app/agent/src/: server.py
05-pipecat-app/src/app/: layout.tsx
05-pipecat-app/src/app/api/message/: route.ts
05-pipecat-app/src/app/api/session/: route.ts
05-pipecat-app/src/components/: AgentCallUI.tsx
05-pipecat-app/src/components/agent-call/: AgentVideoView.tsx  CallControlsBar.tsx  ChromaKeyVideo.tsx  LandscapeAnimatedBackground.tsx  PlaceholderMedia.tsx  PortraitLandscapeFrame.tsx  PreJoinPreview.tsx
05-pipecat-app/src/components/ui/: button.tsx
05-pipecat-app/src/lib/: constants.ts  pipecat-backend.ts
05-pipecat-app/src/lib/chroma-key/: createChromaKeyRenderer.ts
06-form-demo/: .env.example  README.md  package.json
06-form-demo/agent/: agent.py  demo_room.py  pyproject.toml
06-form-demo/frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
06-form-demo/frontend/app/: globals.css  layout.tsx  page.tsx
06-form-demo/frontend/src/: App.tsx  demoTypes.ts  useLiveKitRoom.ts
06-form-demo/frontend/src/components/: AgentSidebar.tsx  DemoConfirmationModal.tsx  Landing.tsx  LemonSliceLogo.tsx  PipelineHud.tsx  PreConnectScreen.tsx
06-form-demo/frontend/src/data/: availability.ts
07-livekit-zoom/: .env.example  README.md  agent.py  pyproject.toml
08-chromakey-landscape-demo/: .env.example  README.md  package-lock.json  package.json
08-chromakey-landscape-demo/agent/: pyproject.toml
08-chromakey-landscape-demo/agent/src/: agent.py
08-chromakey-landscape-demo/src/app/: layout.tsx
08-chromakey-landscape-demo/src/components/: TextComposer.tsx
08-chromakey-landscape-demo/src/components/agent-call/: CallControlsBar.tsx  LandscapeBackgroundVideo.tsx  PlaceholderMedia.tsx  PreJoinPreview.tsx
08-chromakey-landscape-demo/src/lib/: constants.ts
08-chromakey-landscape-demo/src/lib/chroma-key/: createChromaKeyRenderer.ts
08-green-screen-landscape-demo/: README.md  package-lock.json  package.json
08-green-screen-landscape-demo/agent/: README.md  pyproject.toml
08-green-screen-landscape-demo/agent/src/: agent.py
08-green-screen-landscape-demo/public/sounds/: ring.m4a
08-green-screen-landscape-demo/src/components/: AgentCallUI.tsx  MicrophoneSlashIcon.tsx
08-green-screen-landscape-demo/src/components/agent-call/: AgentVideoView.tsx
08-greenscreen-landscape-demo/: README.md  package-lock.json  package.json  tailwind.config.ts
08-greenscreen-landscape-demo/agent/: pyproject.toml
08-greenscreen-landscape-demo/src/app/: page.tsx
08-greenscreen-landscape-demo/src/components/: AgentCallUI.tsx
08-greenscreen-landscape-demo/src/components/agent-call/: ChromaKeyVideo.tsx
08-greenscreen-landscape-demo/src/lib/chroma-key/: createChromaKeyRenderer.ts
09-realtime-image-change/: .env.example  README.md  next.config.ts  package-lock.json  package.json
09-realtime-image-change/agent/: README.md  pyproject.toml
09-realtime-image-change/agent/src/: agent.py  lemonslice_control.py
09-realtime-image-change/src/app/: layout.tsx  page.tsx
09-realtime-image-change/src/components/: AgentCallUI.tsx  ImageChangePanel.tsx  livekit-video-webgl-canvas.tsx
09-realtime-image-change/src/components/agent-call/: AgentVideoView.tsx  CallControlsBar.tsx
09-realtime-image-change/src/lib/: agent-messages.ts  hero-idle-pointer.ts  image-upload.ts
10-websocket-test/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  requirements.txt
10-websocket-test/backend/: rooms.py  server.py
10-websocket-test/src/: App.tsx  api.ts  index.css  main.tsx
10-websocket-test/src/components/: AgentCallUI.tsx
10-websocket-test/src/components/agent-call/: AgentVideoView.tsx  CallControlsBar.tsx  DailyCallView.tsx  EgressSideMenu.tsx  LiveKitCallView.tsx  PreJoinPreview.tsx  RingingShell.tsx  TunnelEventLog.tsx  TunnelPanels.tsx
10-websocket-test/src/components/ui/: button.tsx
10-websocket-test/src/hooks/: useActiveSize.ts  useCallRinger.ts
10-websocket-test/src/lib/: tunnel.ts  wav.ts
livekit-lemonslice-agent/: .env.example  agent.py  pyproject.toml  utils.py
realtime-agent/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
realtime-agent/src/: App.jsx  api.js
realtime-agent/src/components/: AgentVideoTile.jsx  Chat.jsx  HomeScreen.jsx  LemonSliceAgentApp.jsx  Tray.jsx
realtime-agent/src/providers/: AgentStateProvider.tsx
(+3 files in other folders)
