[project]
name = "livekit-zoom-avatar"
version = "1.0.0"
description = "Send a LemonSlice avatar into Zoom, Google Meet, or Microsoft Teams via LiveKit Agents"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # join_meeting() is not in a PyPI release yet (as of 2026-06-24) — install lemonslice plugin from branch.
    "livekit-agents>=1.4.5",
    "livekit-plugins-openai>=1.4.5",
    "livekit-plugins-groq>=1.4.5",
    "livekit-plugins-elevenlabs>=1.4.5",
    "livekit-plugins-lemonslice @ git+https://github.com/lemonsliceai/agents.git@ajw/external-meeting-support#subdirectory=livekit-plugins/livekit-plugins-lemonslice",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

# The agents git repo is a uv workspace; without overrides, transitive deps like
# livekit-plugins-openai resolve from the checkout instead of PyPI and uv errors.
override-dependencies = [
    "livekit-agents>=1.4.5",
    "livekit-plugins-openai>=1.4.5",
    "livekit-plugins-groq>=1.4.5",
    "livekit-plugins-elevenlabs>=1.4.5",
]

[tool.uv.sources]
livekit-plugins-lemonslice = { git = "https://github.com/lemonsliceai/agents.git", branch = "ajw/external-meeting-support", subdirectory = "livekit-plugins/livekit-plugins-lemonslice" }
