[project]
name = "livekit-lemonslice-agent"
version = "0.1.0"
description = "An example on how to use LiveKit's LemonSlice plugin"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "livekit-agents~=1.3",
    "livekit-plugins-elevenlabs>=1.3.11",
    "livekit-plugins-lemonslice",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-silero>=1.3.11",
    "livekit-plugins-turn-detector>=1.3.11",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
livekit-plugins-lemonslice = { git = "https://github.com/livekit/agents.git", subdirectory = "livekit-plugins/livekit-plugins-lemonslice", rev = "main" }
