[project]
name = "lemonslice-greenscreen-landscape-demo-agent"
version = "0.1.0"
description = "LiveKit Agents worker: Groq LLM + ElevenLabs TTS + LemonSlice avatar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=1.6.4",
    "livekit-plugins-groq>=1.6.4",
    "livekit-plugins-elevenlabs>=1.6.4",
    "livekit-plugins-lemonslice>=1.6.4",
    "livekit-plugins-noise-cancellation>=0.2",
    "python-dotenv>=1.0.0",
]
